[metadata]
name = Utility
version = 0.0.5
author = Chris O'Quinn
author_email = chrisoquinn.2@gmail.com
description  = contains useful utility tools
url = https://github.com/smithblack-0/Utility/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
[options]
packages = find:
python_requires = >= 3.7
include_package_data = True